# fsorg

./: .gitignore  .rubocop.yml  Gemfile  README.md  example.sh  fsorg  fsorg.gemspec  fsorg_example.txt  fsorg_test.txt  fsorgfile.py  main.py  main.rb  pyproject.toml  requirements.txt
.ortfo/: description.md
example/: debian.fsorg  linux.fsorg
lib/: fsorg.rb
