[tool.poetry]
name = "fsorg"
version = "1.0.4"
description = "Create a directory structure by describing it"
authors = ["ewen-lbh <ewen.lebihan7@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/ewen-lbh/fsorg'
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Topic :: System :: Filesystems"
]

[tool.poetry.scripts]
fsorg = 'fsorg.entry:run'

[tool.poetry.dependencies]
python = "^3.7"
rm = "^2019.4.13"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
